feat: add header skeleton

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -14,3 +14,6 @@ $navbar-padding-x: 1.15rem;
 $navbar-link-hover: $base-color;
 $navbar-link-padding-y: 0.5rem;
 $navbar-link-padding-x: 1rem;
+
+$search-input-color: #f7f6f1;
+$text-light: #7f7f7f;
